--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"embla-carousel-svelte": "^8.1.8",
 		"lucide-svelte": "^0.424.0",
 		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.8"
 	}
 }
