Add checkout process with stripe

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-MEDUSA_PKEY=pk_key
+PUBLIC_BASE_URL=http://example.com
 PUBLIC_REGION_ID=reg_id
+
+MEDUSA_PKEY=pk_token
+MEDUSA_API_TOKEN=api_token
+
+STRIPE_WEBHOOK_KEY=whsec_key
+STRIPE_API_KEY=sk_key
+PUBLIC_STRIPE_API_KEY=pk_key
