--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fontsource/fira-mono": "^5.0.0",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/enhanced-img": "^0.3.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -37,10 +38,13 @@
 	"type": "module",
 	"dependencies": {
 		"@medusajs/medusa-js": "^6.1.9",
+		"@stripe/stripe-js": "^3.5.0",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.1.8",
 		"lucide-svelte": "^0.424.0",
+		"stripe": "^16.7.0",
+		"svelte-stripe": "^1.2.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
