Add error handling (!7)
See merge request luvallegea/drezzing-frontend!7

--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.1.8",
 		"lucide-svelte": "^0.424.0",
+		"mode-watcher": "^0.4.1",
+		"pino": "^9.3.2",
 		"stripe": "^16.7.0",
+		"svelte-sonner": "^0.3.27",
 		"svelte-stripe": "^1.2.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
