--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ PUBLIC_BASE_URL=http://example.com
 PUBLIC_REGION_ID=reg_id
 
 MEDUSA_BACKEND_URL=url
+MEDUSA_SALES_CHANNEL=scè_
 MEDUSA_PKEY=pk_token
 MEDUSA_API_TOKEN=api_token
 
