--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 PUBLIC_BASE_URL=http://example.com
 PUBLIC_REGION_ID=reg_id
 
+DEFAULT_SHIPPING_ID=so_id
+
 MEDUSA_BACKEND_URL=url
-MEDUSA_SALES_CHANNEL=scè_
+MEDUSA_SALES_CHANNEL=sc_
 MEDUSA_PKEY=pk_token
 MEDUSA_API_TOKEN=api_token
 
