--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "drezzing-storefront",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -11,44 +12,39 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^5.0.0",
-		"@neoconfetti/svelte": "^2.0.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-node": "^5.2.2",
-		"@sveltejs/enhanced-img": "^0.3.1",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^9.6.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^9.0.0",
+		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/kit": "^2.7.4",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@types/eslint": "^9.6.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"postcss": "^8.4.38",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.6.4",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.11.0",
+		"postcss": "^8.4.47",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"svelte": "^5.1.9",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.12.2",
+		"vite": "^5.4.10"
 	},
-	"type": "module",
 	"dependencies": {
 		"@medusajs/medusa-js": "^6.1.9",
 		"@stripe/stripe-js": "^3.5.0",
-		"bits-ui": "^0.21.13",
+		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
-		"embla-carousel-svelte": "^8.1.8",
+		"embla-carousel-svelte": "^8.3.1",
 		"lucide-svelte": "^0.424.0",
 		"mode-watcher": "^0.4.1",
-		"pino": "^9.3.2",
-		"stripe": "^16.7.0",
-		"svelte-sonner": "^0.3.27",
-		"svelte-stripe": "^1.2.0",
-		"tailwind-merge": "^2.4.0",
+		"pino": "^9.5.0",
+		"stripe": "^16.12.0",
+		"svelte-sonner": "^0.3.28",
+		"svelte-stripe": "^1.3.0",
+		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
 	}
