--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^0.22.0",
 		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
+		"formsnap": "^1.0.1",
 		"globals": "^15.11.0",
+		"lucide-svelte": "^0.469.0",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"svelte": "^5.1.9",
 		"svelte-check": "^3.8.6",
+		"sveltekit-superforms": "^2.22.1",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.12.2",
@@ -35,10 +39,8 @@
 	"dependencies": {
 		"@medusajs/medusa-js": "^6.1.9",
 		"@stripe/stripe-js": "^3.5.0",
-		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.3.1",
-		"lucide-svelte": "^0.424.0",
 		"mode-watcher": "^0.4.1",
 		"pino": "^9.5.0",
 		"stripe": "^16.12.0",
@@ -46,6 +48,6 @@
 		"svelte-stripe": "^1.3.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
-		"zod": "^3.23.8"
+		"zod": "^3.24.1"
 	}
 }
