chore(env): update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
 PUBLIC_BASE_URL=http://example.com
 PUBLIC_REGION_ID=reg_id
-
-DEFAULT_SHIPPING_ID=so_id
+PUBLIC_DEFAULT_SHIPPING_ID=so_id
 
 MEDUSA_BACKEND_URL=url
 MEDUSA_SALES_CHANNEL=sc_
 MEDUSA_PKEY=pk_token
 MEDUSA_API_TOKEN=api_token
 
+CHECKOUT_NOTIFICATION_KEY=key
+
 STRIPE_WEBHOOK_KEY=whsec_key
 STRIPE_API_KEY=sk_key
 PUBLIC_STRIPE_API_KEY=pk_key
 
 DISCORD_WEBHOOK=url
+
+REDIS_URL=redis://domain.ext:6379
