chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 PUBLIC_BASE_URL=http://example.com
-PUBLIC_REGION_ID=reg_id
-PUBLIC_DEFAULT_SHIPPING_ID=so_id
+PUBLIC_MEDUSA_DEFAULT_SHIPPING_ID=so_id
 
 MEDUSA_BACKEND_URL=url
-MEDUSA_SALES_CHANNEL=sc_
 MEDUSA_PKEY=pk_token
 MEDUSA_API_TOKEN=api_token
+MEDUSA_SALES_CHANNEL_ID=sc_
+MEDUSA_REGION_ID=reg_id
 
 CHECKOUT_NOTIFICATION_KEY=key
 
