--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.2.9",
-		"@sveltejs/kit": "^2.7.4",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/kit": "^2.20.4",
+		"@sveltejs/vite-plugin-svelte": "^4.0.4",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
@@ -28,7 +28,7 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"svelte": "^5.1.9",
+		"svelte": "^5.25.6",
 		"svelte-check": "^3.8.6",
 		"sveltekit-superforms": "^2.22.1",
 		"tailwindcss": "^3.4.14",
