--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-    "name": "drezzing-storefront",
-    "version": "0.0.1",
+    "name": "drezzing-frontend",
+    "version": "1.0.0",
+    "description": "Frontend of Drezzing's website, built with SvelteKit and shadcn-svelte.",
+    "author": "Drezzing (https://drezzing.fr)",
     "type": "module",
     "scripts": {
         "dev": "vite dev",
