--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
+        "@lucide/svelte": "^0.507.0",
         "@sveltejs/adapter-node": "^5.2.12",
         "@sveltejs/kit": "^2.20.4",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -25,7 +26,6 @@
         "eslint-plugin-svelte": "^3.5.1",
         "formsnap": "^1.0.1",
         "globals": "^16.0.0",
-        "lucide-svelte": "^0.469.0",
         "postcss": "^8.4.47",
         "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.3.3",
