--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "formsnap": "^1.0.1",
         "globals": "^16.0.0",
         "mode-watcher": "^0.4.1",
+        "patch-package": "^8.0.0",
         "postcss": "^8.4.47",
         "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.3.3",
