--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --check . && eslint .",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "postinstall": "patch-package"
     },
     "devDependencies": {
         "@lucide/svelte": "^0.507.0",
@@ -31,6 +32,7 @@
         "formsnap": "^1.0.1",
         "globals": "^16.0.0",
         "mode-watcher": "^0.4.1",
+        "patch-package": "^8.0.0",
         "postcss": "^8.4.47",
         "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.3.3",
