--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "tailwindcss": "^3.4.14",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.29.0",
+        "typescript-svelte-plugin": "^0.3.46",
         "vite": "^6.2.5",
         "zod": "^3.24.2"
     },
