--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "svelte-check": "^3.8.6",
         "svelte-sonner": "^0.3.28",
         "svelte-stripe": "^1.3.0",
-        "sveltekit-superforms": "^2.22.1",
+        "sveltekit-superforms": "^2.25.0",
         "tailwind-merge": "^2.5.4",
         "tailwind-variants": "^0.2.1",
         "tailwindcss": "^3.4.14",
@@ -49,13 +49,14 @@
         "typescript-eslint": "^8.29.0",
         "typescript-svelte-plugin": "^0.3.46",
         "vite": "^6.2.5",
-        "zod": "^3.24.2"
+        "zod": "^3.25.28"
     },
     "dependencies": {
         "pino": "^9.6.0"
     },
     "packageManager": "bun@1.2.13",
     "patchedDependencies": {
-        "svelte-sonner@0.3.28": "patches/svelte-sonner@0.3.28.patch"
+        "svelte-sonner@0.3.28": "patches/svelte-sonner@0.3.28.patch",
+        "sveltekit-superforms@2.25.0": "patches/sveltekit-superforms@2.25.0.patch"
     }
 }
