--- a/package.json
+++ b/package.json
@@ -15,31 +15,40 @@
         "patch": "patch-package"
     },
     "devDependencies": {
-        "@lucide/svelte": "^0.507.0",
+        "@exodus/schemasafe": "^1.3.0",
+        "@lucide/svelte": "^0.482.0",
         "@medusajs/medusa-js": "^6.1.10",
+        "@sinclair/typebox": ">=0.32.30 <1",
         "@stripe/stripe-js": "^3.5.0",
         "@sveltejs/adapter-node": "^5.2.12",
         "@sveltejs/kit": "^2.20.4",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@types/eslint": "^9.6.1",
+        "@typeschema/class-validator": "^0.2.0",
+        "@vinejs/vine": "^1.8.0",
+        "arktype": ">=2.0.0-rc.8",
         "autoprefixer": "^10.4.20",
-        "bits-ui": "^0.22.0",
+        "bits-ui": "^1.7.0",
+        "class-validator": "^0.14.1",
         "clsx": "^2.1.1",
-        "embla-carousel-svelte": "^8.6.0",
+        "embla-carousel-svelte": "8.1.6",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-svelte": "^3.5.1",
-        "formsnap": "^1.0.1",
+        "formsnap": "2.0.0-next.1",
         "globals": "^16.0.0",
-        "mode-watcher": "^0.4.1",
+        "joi": "^17.13.1",
+        "mode-watcher": "^1.0.7",
+        "paneforge": "^1.0.0-next.5",
         "postcss": "^8.4.47",
         "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "stripe": "^16.12.0",
+        "superstruct": "^2.0.2",
         "svelte": "^5.25.6",
         "svelte-check": "^3.8.6",
-        "svelte-sonner": "^0.3.28",
+        "svelte-sonner": "^0.3.25",
         "svelte-stripe": "^1.3.0",
         "sveltekit-superforms": "^2.25.0",
         "tailwind-merge": "^2.5.4",
@@ -48,11 +57,15 @@
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.29.0",
         "typescript-svelte-plugin": "^0.3.46",
+        "valibot": ">=0.33.0 <1",
+        "vaul-svelte": "^1.0.0-next.7",
         "vite": "^6.2.5",
+        "yup": "^1.4.0",
         "zod": "^3.25.28"
     },
     "dependencies": {
-        "pino": "^9.6.0"
+        "pino": "^9.6.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "packageManager": "bun@1.2.13",
     "patchedDependencies": {
