--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "embla-carousel-svelte": "8.1.6",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.1",
-        "eslint-plugin-svelte": "^3.5.1",
+        "eslint-plugin-svelte": "^3.9.0",
         "formsnap": "2.0.0-next.1",
         "globals": "^16.0.0",
         "joi": "^17.13.1",
@@ -42,12 +42,13 @@
         "paneforge": "^1.0.0-next.5",
         "postcss": "^8.4.47",
         "prettier": "^3.5.3",
-        "prettier-plugin-svelte": "^3.3.3",
+        "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "stripe": "^16.12.0",
         "superstruct": "^2.0.2",
-        "svelte": "^5.25.6",
+        "svelte": "^5.33.2",
         "svelte-check": "^3.8.6",
+        "svelte-render-scan": "^1.1.0",
         "svelte-sonner": "^0.3.25",
         "svelte-stripe": "^1.3.0",
         "sveltekit-superforms": "^2.25.0",
@@ -56,7 +57,7 @@
         "tailwindcss": "^3.4.14",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.29.0",
-        "typescript-svelte-plugin": "^0.3.46",
+        "typescript-svelte-plugin": "^0.3.47",
         "valibot": ">=0.33.0 <1",
         "vaul-svelte": "^1.0.0-next.7",
         "vite": "^6.2.5",
