--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "devDependencies": {
         "@exodus/schemasafe": "^1.3.0",
-        "@lucide/svelte": "^0.534.0",
+        "@lucide/svelte": "^0.536.0",
         "@medusajs/medusa-js": "^6.1.10",
         "@sinclair/typebox": ">=0.32.30 <1",
         "@stripe/stripe-js": "^3.5.0",
@@ -29,10 +29,10 @@
         "@vinejs/vine": "^1.8.0",
         "arktype": ">=2.0.0-rc.8",
         "autoprefixer": "^10.4.20",
-        "bits-ui": "^2.9.0",
+        "bits-ui": "^2.9.1",
         "class-validator": "^0.14.1",
         "clsx": "^2.1.1",
-        "embla-carousel-svelte": "8.1.6",
+        "embla-carousel-svelte": "^8.6.0",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-svelte": "^3.9.0",
@@ -40,7 +40,7 @@
         "globals": "^16.0.0",
         "joi": "^17.13.1",
         "mode-watcher": "^1.0.7",
-        "paneforge": "^1.0.0-next.6",
+        "paneforge": "^1.0.2",
         "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
@@ -53,9 +53,9 @@
         "svelte-stripe": "^1.3.0",
         "sveltekit-superforms": "^2.25.0",
         "tailwind-merge": "^3.3.1",
-        "tailwind-variants": "^2.0.1",
+        "tailwind-variants": "^2.1.0",
         "tailwindcss": "^4.1.11",
-        "tw-animate-css": "^1.3.5",
+        "tw-animate-css": "^1.3.6",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.29.0",
         "typescript-svelte-plugin": "^0.3.47",
@@ -70,7 +70,6 @@
     },
     "packageManager": "bun@1.2.13",
     "patchedDependencies": {
-        "svelte-sonner@0.3.28": "patches/svelte-sonner@0.3.28.patch",
         "sveltekit-superforms@2.25.0": "patches/sveltekit-superforms@2.25.0.patch"
     }
 }
