--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "svelte-render-scan": "^1.1.0",
         "svelte-sonner": "^1.0.5",
         "svelte-stripe": "^1.3.0",
-        "sveltekit-superforms": "^2.25.0",
+        "sveltekit-superforms": "^2.27.1",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^2.1.0",
         "tailwindcss": "^4.1.11",
@@ -63,7 +63,7 @@
         "vaul-svelte": "^1.0.0-next.7",
         "vite": "^6.2.5",
         "yup": "^1.4.0",
-        "zod": "^3.25.28"
+        "zod": "3.25.76"
     },
     "dependencies": {
         "pino": "^9.6.0"
