--- a/package.json
+++ b/package.json
@@ -15,22 +15,16 @@
         "patch": "patch-package"
     },
     "devDependencies": {
-        "@exodus/schemasafe": "^1.3.0",
         "@lucide/svelte": "^0.536.0",
         "@medusajs/medusa-js": "^6.1.10",
-        "@sinclair/typebox": ">=0.32.30 <1",
         "@stripe/stripe-js": "^3.5.0",
         "@sveltejs/adapter-node": "^5.2.12",
         "@sveltejs/kit": "^2.20.4",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@tailwindcss/vite": "^4.1.11",
         "@types/eslint": "^9.6.1",
-        "@typeschema/class-validator": "^0.2.0",
-        "@vinejs/vine": "^1.8.0",
-        "arktype": ">=2.0.0-rc.8",
         "autoprefixer": "^10.4.20",
         "bits-ui": "^2.9.1",
-        "class-validator": "^0.14.1",
         "clsx": "^2.1.1",
         "embla-carousel-svelte": "^8.6.0",
         "eslint": "^9.24.0",
@@ -38,20 +32,18 @@
         "eslint-plugin-svelte": "^3.9.0",
         "formsnap": "^2.0.1",
         "globals": "^16.0.0",
-        "joi": "^17.13.1",
         "mode-watcher": "^1.0.7",
         "paneforge": "^1.0.2",
         "prettier": "^3.5.3",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "stripe": "^16.12.0",
-        "superstruct": "^2.0.2",
         "svelte": "^5.33.2",
         "svelte-check": "^4.3.0",
         "svelte-render-scan": "^1.1.0",
         "svelte-sonner": "^1.0.5",
         "svelte-stripe": "^1.3.0",
-        "sveltekit-superforms": "^2.25.0",
+        "sveltekit-superforms": "^2.27.1",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^2.1.0",
         "tailwindcss": "^4.1.11",
@@ -59,17 +51,12 @@
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.29.0",
         "typescript-svelte-plugin": "^0.3.47",
-        "valibot": ">=0.33.0 <1",
         "vaul-svelte": "^1.0.0-next.7",
         "vite": "^6.2.5",
-        "yup": "^1.4.0",
-        "zod": "^3.25.28"
+        "zod": "3.25.76"
     },
     "dependencies": {
         "pino": "^9.6.0"
     },
-    "packageManager": "bun@1.2.13",
-    "patchedDependencies": {
-        "sveltekit-superforms@2.25.0": "patches/sveltekit-superforms@2.25.0.patch"
-    }
+    "packageManager": "bun@1.2.13"
 }
