--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
     "singleQuote": false,
     "trailingComma": "all",
     "printWidth": 120,
+    "endOfLine": "crlf",
     "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
     "overrides": [
         {
