--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "dependencies": {
         "pino": "^9.6.0"
     },
-    "packageManager": "bun@1.2.13"
+    "packageManager": "bun@1.2.13",
+    "patchedDependencies": {
+        "svelte-stripe@1.3.0": "patches/svelte-stripe@1.3.0.patch"
+    }
 }
