feat: initial mondial relay integration - serach for city - search for parcels in city - interactive parcel selector

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ STRIPE_WEBHOOK_KEY=whsec_key
 STRIPE_API_KEY=sk_key
 PUBLIC_STRIPE_API_KEY=pk_key
 
+MONDIAL_RELAY_ENSEIGNE=
+MONDIAN_RELAY_API1_PRIVATE_KEY=
+
 DISCORD_WEBHOOK=url
 
 REDIS_URL=redis://domain.ext:6379
