--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "patch": "patch-package"
     },
     "devDependencies": {
+        "@frontboi/mondial-relay": "^1.2.49",
         "@internationalized/date": "^3.8.2",
         "@lucide/svelte": "^0.536.0",
         "@medusajs/medusa-js": "^6.1.10",
@@ -38,9 +39,11 @@
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
+        "runed": "^0.31.1",
         "stripe": "^16.12.0",
         "svelte": "^5.37.3",
         "svelte-check": "^4.3.1",
+        "svelte-maplibre-gl": "^1.0.1",
         "svelte-render-scan": "^1.1.0",
         "svelte-sonner": "^1.0.5",
         "svelte-stripe": "^1.3.0",
@@ -61,6 +64,7 @@
     },
     "packageManager": "bun@1.2.13",
     "patchedDependencies": {
-        "svelte-stripe@1.3.0": "patches/svelte-stripe@1.3.0.patch"
+        "svelte-stripe@1.3.0": "patches/svelte-stripe@1.3.0.patch",
+        "@frontboi/mondial-relay@1.2.49": "patches/@frontboi%2Fmondial-relay@1.2.49.patch"
     }
 }
