--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "eslint-plugin-svelte": "^3.11.0",
         "formsnap": "^2.0.1",
         "globals": "^16.3.0",
+        "maplibre-gl": "^5.7.1",
         "mode-watcher": "^1.0.8",
         "paneforge": "^1.0.2",
         "prettier": "^3.6.2",
