--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ PUBLIC_STRIPE_API_KEY=pk_key
 
 MONDIAL_RELAY_ENSEIGNE=
 MONDIAN_RELAY_API1_PRIVATE_KEY=
+SHIPPING_AES_KEY=
 
 DISCORD_WEBHOOK=url
 
