--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "svelte-render-scan": "^1.1.0",
         "svelte-sonner": "^1.0.5",
         "svelte-stripe": "^1.3.0",
+        "svelte-tel-input": "^3.6.0",
         "sveltekit-superforms": "^2.27.1",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^2.1.0",
