feat: add mondial relay shipping (#49)
* feat: initial mondial relay integration
- serach for city
- search for parcels in city
- interactive parcel selector

* feat: add map drag/fly handling & general cleanup

* refactor(checkout): update shipping ui to support new shipping options

* remove testing page

* fix: build issue

* feat: add warning for unshippable products

* remove debug console.log

* feat: prevent selection of unusable shipping option

* fix(checkout): unusable shipping option check too restrictive
shipping option with dynamic price have amout set to null
this means that the previous check would prevent dynamic options from being selected

* fix(env): typo

* fix(checkout): typo in monaco phone number regex

* fix(checkout): prevent read of undefined values
should not happen even without check but better safe than erroring

* refactor(stripe-form): infer default profile from zod schema

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ STRIPE_WEBHOOK_KEY=whsec_key
 STRIPE_API_KEY=sk_key
 PUBLIC_STRIPE_API_KEY=pk_key
 
+MONDIAL_RELAY_ENSEIGNE=
+MONDIAL_RELAY_API1_PRIVATE_KEY=
+SHIPPING_AES_KEY=
+
 DISCORD_WEBHOOK=url
 
 REDIS_URL=redis://domain.ext:6379
