--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "patch": "patch-package"
     },
     "devDependencies": {
+        "@frontboi/mondial-relay": "^1.2.49",
         "@internationalized/date": "^3.8.2",
         "@lucide/svelte": "^0.536.0",
         "@medusajs/medusa-js": "^6.1.10",
@@ -34,17 +35,21 @@
         "eslint-plugin-svelte": "^3.11.0",
         "formsnap": "^2.0.1",
         "globals": "^16.3.0",
+        "maplibre-gl": "^5.7.1",
         "mode-watcher": "^1.0.8",
         "paneforge": "^1.0.2",
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
+        "runed": "^0.31.1",
         "stripe": "^16.12.0",
         "svelte": "^5.37.3",
         "svelte-check": "^4.3.1",
+        "svelte-maplibre-gl": "^1.0.1",
         "svelte-render-scan": "^1.1.0",
         "svelte-sonner": "^1.0.5",
         "svelte-stripe": "^1.3.0",
+        "svelte-tel-input": "^3.6.0",
         "sveltekit-superforms": "^2.27.1",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^2.1.0",
@@ -62,6 +67,7 @@
     },
     "packageManager": "bun@1.2.13",
     "patchedDependencies": {
-        "svelte-stripe@1.3.0": "patches/svelte-stripe@1.3.0.patch"
+        "svelte-stripe@1.3.0": "patches/svelte-stripe@1.3.0.patch",
+        "@frontboi/mondial-relay@1.2.49": "patches/@frontboi%2Fmondial-relay@1.2.49.patch"
     }
 }
